# WhisperDrop

./: .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
scripts/: build-sidecar.ps1  build-sidecar.sh
sidecar/: audio.py  main.py  ollama_models.json  postprocess.py  requirements.txt  transcribe.py  whisper-sidecar.spec
sidecar/pyinstaller_hooks/: runtime_hook_sounddevice.py
src/: App.tsx  i18n.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  focus.rs  hotkey.rs  lib.rs  main.rs  ollama.rs  paste.rs  sidecar.rs
src/components/: HistoryPanel.tsx  OverlayBar.tsx  SettingsPanel.tsx
src/components/settings/: AdvancedTab.tsx  DictionaryTab.tsx  HistoryTab.tsx  ModelsTab.tsx  SettingsTab.tsx  UsageTab.tsx  VocabularyModal.tsx
src/components/ui/: Label.tsx  Section.tsx
src/hooks/: useHistory.ts  useSettings.ts  useTauriEvent.ts
src/styles/: index.css
